# SecureSFML

./: CMakeLists.txt  README.txt
examples/: client.cpp  server.cpp
include/SFML/SecureNetwork/: AESCipher.hpp  Cipher.hpp  RC4Cipher.hpp  SecurePacket.hpp  SecureTcpListener.hpp  SecureTcpSocket.hpp  SelectorSecureTCP.hpp
include/SecureSFML/: SecureNetwork.hpp
include/SecureSFML/SecureNetwork/: AESCipher.hpp  Cipher.hpp  RC4Cipher.hpp  SecurePacket.hpp  SecureTcpListener.hpp  SecureTcpSocket.hpp
src/: AESCipher.cpp  CMakeLists.txt  RC4Cipher.cpp  SecurePacket.cpp  SecureTcpListener.cpp  SecureTcpSocket.cpp  copy of SecureSocketTCP.cpp
